Revision history for {{$dist->name}}

{{$NEXT}}

4.300027  2012-10-16 21:07:06 America/New_York
          the "latest" symlink code broke Dist::Zilla on win32; fixed now!
          (thanks, Brendan Byrd!)

4.300026  2012-10-13 22:21:17 America/New_York
          PodSyntaxTests, PodCoverageTests and MetaTests now add the right
          develop/requires prereqs (thanks, Olivier Mengué and Ricardo Signes!)

          ModuleBuild now takes an mb_lib argument that can override the
          default of "inc" (thanks, ben hengst)

          create .build/latest symlink when a build in .build is built (thanks,
          Alexei Znamensky!)

          allow "-version" arg to [@Filter] to specify the version of the
          bundle required (thanks, Rob Hoelz)

4.300025  2012-10-07 23:02:33 America/New_York
          add the LicenseProvider and NameProvider roles (thanks, Vyacheslav
          Matjukhin!)

          make Dist::Zilla::App::Tester be a CaptureExternal App::Cmd::Tester

4.300024  2012-09-26 12:01:45 America/New_York
          include $] in MetaConfig data

4.300023  2012-09-06 09:01:12 America/New_York
          do not use ">" in a filename; fixes the build on Win32 (thanks,
          djgoku!)

4.300022  2012-09-05 08:35:27 America/New_York
          do not detect an escaped "\$VERSION =" as an assignment to a variable
          (this is sort of a half-measure)

          'dzil run' also edits $PATH to include ExecDir directories (Karen
          Etheridge)

4.300021  2012-07-31 23:20:50 America/New_York
          plugins can now provide a MANIFEST.SKIP that can be processed by
          ManifestSkip. Previously generated content was just ignored.
          (thanks, Olivier Mengué!)

          GenerateFile can now also template its filename, with the
          name_is_template option (Thanks, Karen Etheridge!)

4.300020  2012-06-21 11:17:40 America/New_York
          properly set the working directory when testing (thanks, Jesse
          Luehrs!)
